Fixing bug with min-height on Iphone

--- a/src/components/ChoosenCar/ChoosenCar.scss
+++ b/src/components/ChoosenCar/ChoosenCar.scss
@@ -4,10 +4,10 @@ $block-height: 228px;
 $image-height: 280px;
 
 .choosen-car {
-  min-height: 100vh;
+  min-height: 130vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   position: fixed;
   top: 0;
   left: 0;
@@ -74,6 +74,7 @@ $image-height: 280px;
   }
 
   &__wrapper {
+    margin-top: 160px;
     display: flex;
     flex-direction: column;
     gap: 2px;
@@ -81,6 +82,7 @@ $image-height: 280px;
     height: 100%;
 
     @include onTablet {
+      margin-top: 0;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
     }
